# bt-dl

./: .env.example  .gitignore  README.md  bot.back.py  pyproject.toml
src/bt_dl/: bot.py
