[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bt-dl-bot"
version = "0.1.0"
description = "Telegram bot for searching and downloading torrents from Rutracker with forum filtering"
readme = "README.md"
authors = [{name = "Sergey", email = "astraser@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["telegram", "bot", "torrent", "rutracker", "aiogram", "bt-dl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
]
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
bt-dl-bot = "bt_dl.bot:main"

[project.urls]
Homepage = "https://github.com/AstraSerg/bt-dl"
Repository = "https://github.com/AstraSerg/bt-dl"
Issues = "https://github.com/AstraSerg/bt-dl/issues"

[tool.poetry]
name = "bt-dl-bot"
version = "0.1.0"
description = "Telegram bot for searching and downloading torrents from Rutracker with forum filtering"
authors = ["Sergey <astraser@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.scripts]
bt-dl-bot = "bt_dl.bot:cli"

[tool.poetry.group.dev.dependencies]

[tool.poetry.build]
generate-setup-file = false

[[tool.poetry.packages]]
include = "bt_dl"
from = "src"

